[project]
name = "ImageStitcher"
version = "0.3"

requires-python = ">=3.11"

dependencies = [
  "flet==0.14.0",
  "stitching==0.5.3",
  # "opencv-python>=4.0.0.0",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "flet.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "stitching.*"
