[project]
name = "ImageStitcher"
version = "0.4"

requires-python = ">=3.11"

dependencies = [
  "flet==0.14.0",
  "opencv-python>=4.8.0.0",
  "stitching==0.5.3",
]

[project.optional-dependencies]
dev = [
  "pyinstaller",
  "pillow"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "flet.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "stitching.*"
