[project]
name = "SmartImageMerger"
version = "0.4.1"
description = "A smart and simple application to merge (stitch) images automatically."

requires-python = ">=3.11"

dependencies = [
  "flet==0.21.0",
  "opencv-python>=4.8.0.0",
  "stitching==0.5.3",
]

[project.optional-dependencies]
dev = [
]

[tool.app]
name = "Smart Image Merger"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "flet.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "stitching.*"
